done a small change on task 1

--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1">First Line</span></p>
-<p class="p1"><span class="s1">Second 1 Task 1 Line</span></p>
+<p class="p1"><span class="s1">Second 1 - Task 1 Line</span></p>
 <p class="p1"><span class="s1">Third Line</span></p>
 </body>
 </html>
